# Accredit-App

./: README.md  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
src/: App.tsx  accredit.tsx  layout.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: accredit.rs  appinfo.rs  main.rs  utils.rs  verify.rs
src/Accredit/: createKey.tsx  index.tsx  verify.tsx
src/components/: copy.tsx
src/page/appList/: index.tsx
src/page/base64/: index.tsx
src/router/: RouterComponent.tsx
src/utils/: index.tsx
