[package]
name = "accredit"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
pem = "1.0"
rand = "0.8.0"                                         # 随机数生成器库
rsa = "0.4.0"                                          # 使用 rsa 库，版本 0.4.0
sha2 = "0.9.0"                                         # 用于哈希的 sha2 库
base64 = "0.21.5"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
